# Neural-Collaborative-Filtering-Recommender

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
artifacts/: ab_test_results.json  evaluation_metrics.json  experiment_manifest.csv
configs/: default.yaml
data/: README.md
data/samples/: interactions.csv
docs/: architecture.md  mlflow_experiments.md  results.md  resume_positioning.md
ncf_recommender/: __init__.py  ab_testing.py  api.py  data.py  faiss_index.py  losses.py  metrics.py  models.py  stats.py  tracking.py  training.py
scripts/: build_faiss_index.py  evaluate_models.py  generate_mlflow_runs.py  prepare_movielens.py  run_ab_test.py  run_smoke_demo.py
tests/: test_ab_testing.py  test_bpr.py  test_data_stats.py  test_faiss_index.py  test_metrics.py
