[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncf-recommender"
version = "0.1.0"
description = "Neural collaborative filtering recommender with BPR training, FAISS retrieval, A/B simulation, and FastAPI inference."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Soumith Reddy Padigapati" }]
dependencies = [
  "fastapi>=0.115.0",
  "numpy>=1.26.0",
  "pydantic>=2.8.0",
  "PyYAML>=6.0.1",
  "scikit-learn>=1.5.0",
  "torch>=2.3.0",
]

[project.optional-dependencies]
retrieval = ["faiss-cpu>=1.8.0"]
tracking = ["mlflow>=2.16.0"]
dev = ["pytest>=8.0.0", "httpx>=0.27.0", "uvicorn[standard]>=0.30.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["ncf_recommender*"]

